syntax = "proto3";

package si.um.feri;

// Sporočila za uporabnike
message User {
  string id = 1;
  string email = 2;
  string password = 3;
}

message RegistrationRequest {
  string email = 1;
  string password = 2;
}

message RegistrationResponse {
  bool success = 1;
  string message = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string userId = 3;
}

message CryptoRequest {
  string name = 1;
}

message CryptoResponse {
  double price = 1;
}

message AlertRequest {
  string name = 1;
  double targetPrice = 2;
}

message AlertResponse {
  bool success = 1;
}

// Razširitev storitev za vključitev upravljanja uporabnikov
service UserService {
  rpc RegisterUser (RegistrationRequest) returns (RegistrationResponse);
  rpc LoginUser (LoginRequest) returns (LoginResponse);
}

// Obstajače definicije vaših kripto storitev
service CryptoService {
  rpc GetCryptoPrice (CryptoRequest) returns (CryptoResponse);
  rpc SetPriceAlert (AlertRequest) returns (AlertResponse);
}